# zarr-python-n5

./: .readthedocs.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
src/zarr_n5/: __init__.py  constants.py  convert.py  metadata.py  util.py
src/zarr_n5/cli/: __init__.py  convert.py
src/zarr_n5/codec/: __init__.py  default.py
src/zarr_n5/storage/: __init__.py  implicit.py  n5.py
tests/: conftest.py  test_conversion.py  test_data.py  test_metadata.py
