[project]
name = "zarr-n5"
version = "0.1.2"
description = "Utilities for accessing N5 data through zarr v3."
readme = "README.md"
authors = [{ name = "Chris Barnes", email = "chris.barnes@gerbi-gmb.de" }]
requires-python = ">=3.11,<4.0"
dependencies = ["zarr>=3.1.5"]

[project.entry-points."zarr.codecs"]
"n5_default" = "zarr_n5:N5DefaultCodec"

[project.scripts]
n5tozarr = "zarr_n5.cli.convert:main"

[project.urls]
source = "https://github.com/clbarnes/zarr-python-n5"
issues = "https://github.com/clbarnes/zarr-python-n5/issues"
documentation = "https://zarr-python-n5.readthedocs.io/en/stable/zarr_n5.html"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "doc" },
]
doc = [
    "pdoc>=16.0.0",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]
test = [
    "pytest>=9.0.2",
    "tensorstore>=0.1.82",
]
